[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sak_rel_onri_system"
version = "0.2.0"
description = "An innovative mathematical framework implementing Sak, Rel, and Onri number systems"
readme = "README.md"
authors = [{name = "Seak Mengly", email = "fuujinmetsu@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mathematics", "number theory", "sak system", "rel system", "onri system"]
dependencies = [
    "numpy",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/VNylle/sak-rel-onri"
"Bug Tracker" = "https://github.com/VNylle/sak-rel-onri/issues"
