[metadata]
name = sak_system
version = 0.3.0
author = Seak Mengly
author_email = fuujinmetsu@gmail.com
description = A mathematical framework different from traditional number systems
long_description = file: README.md
long_description_content_type = text
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
